project link alignment & footer fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
- body {
+body {
      background-image: url("/assets/images/concrete_seamless.jpg");
      background-repeat: repeat; 
-    }
+}
 
 .topnav {
     background-color: white;
@@ -28,7 +28,6 @@ h1 {
     color: white;
     margin-bottom: 0px;
     margin-top: 0px;
-
 }
 
 .topnav a {
@@ -102,6 +101,7 @@ hr {
     position: fixed;
     bottom: 0;
     left: 0;
+    padding: 0px;
     width: 100%;
     height: 50px;
     background: #666;
@@ -112,13 +112,20 @@ hr {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#footerContent {
-    margin-top: 30px;
+.footerContent {
+    position: absolute;
+    bottom: 0;
+}
+
+.footerContent p {
+    margin-bottom: 0px;
 }
 
 .projectsContainer {
     margin-top: 30px;
     width: 70%;
+    z-index: 2;
+    overflow: hidden;
 }
 
 .projectLink {
@@ -128,6 +135,7 @@ hr {
     width: 250px;
     height: 170px;
     margin: 10px;
+    float: left;
 }
 
 .projectImage {
